[package]
description = "Thin wrapper around `humantime` crate to provide a CLI interface."
name = "humantime-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/endigma/humantime-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
humantime = "2.1.0"
